# iop-algorithm

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: gui.yml
.moai/: manifest.json
.moai/config/sections/: project.yaml  user.yaml
.moai/project/: product.md  structure.md  tech.md
.moai/project/codemaps/: data-flow.md  dependencies.md  entry-points.md  modules.md  overview.md
.moai/reports/: P1_INTENDED_PERFORMANCE_EVAL.md  SPEC-VIEWER-001-final-crosscheck.md  SPEC-VIEWER-001-live-verification-report.md  SPEC-VIEWER-001-spike.md
.moai/reports/SPEC-XGUI-DOCUMENT-AUDIT-2026-07-13/: README.md  audit-v0.4.md  audit-v0.5-final.md  audit-v0.5.1-final.md  round-2.md
.moai/reports/plan-audit/: PROJECT-review-1.md  SPEC-INFRA-001-review-1.md  SPEC-INFRA-001-review-2.md  SPEC-TIER-001-review-1.md  SPEC-VIEWER-001-review-1.md  SPEC-VIEWER-001-review-2.md
.moai/specs/SPEC-CALDOM-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-CORR-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-DENOISE-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-DQEDOC-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-ERGO-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-GRID-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-GUIDING-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-INFRA-001/: acceptance.md  plan.md  research.md  spec-compact.md  spec.md
.moai/specs/SPEC-LAG-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-LNSG-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-METRICS-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-NDT-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-POST-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-REALDATA-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-TIER-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-VGRID-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-VIEWER-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-XGUI-CALIB/: acceptance.md  plan.md  research.md  spec.md
.moai/specs/SPEC-XGUI-DENOISE/: acceptance.md  plan.md  research.md  spec.md
.moai/specs/SPEC-XGUI-ENHANCE/: acceptance.md  plan.md  research.md  spec.md
.moai/specs/SPEC-XGUI-GRID/: acceptance.md  plan.md  research.md  spec.md
.moai/specs/SPEC-XGUI-LAG/: acceptance.md  plan.md  research.md  spec.md
.moai/specs/SPEC-XGUI-LINESATGEO/: acceptance.md  plan.md  research.md  spec.md
.moai/specs/SPEC-XGUI-MASTER/: HANDOFF.md  README.md  acceptance.md  algorithm-catalog.md  baseline-control.md  eval-methodology.md  foundation.md  plan.md  research.md  spec.md  test-plan.md  traceability-matrix.md
.moai/specs/SPEC-XGUI-METRICS/: acceptance.md  plan.md  research.md  spec.md
.moai/state/: db-detection.json
apps/: __init__.py
apps/gui/: __init__.py  app.py  config.py  export.py  help_dialog.py  history_panel.py  io_panel.py  layers.py  metrics_panel.py  module_panel.py  pipeline_panel.py  probe.py  worker.py
apps/xdet-console/: .gitignore  Xdet.sln
common/: __init__.py  calibset.py  contract.py  equivalence.py  fft_psd.py  histogram_fov.py  io.py  mask_ops.py  pyramid.py  robust_stats.py  synth_calibset.py  xframe.py
data/: README.md
docs/: GUI_CRITERIA.md  GUI_REVIEW.md  P1_COMPLETION_REPORT.md  XDET_EVAL_criteria_v1.1.md  XDET_FRD_v1.1.md  XDET_ID_scheme_v1.0.md  XDET_MRD_v1.0.md  XDET_P1_dev_plan_v1.0.md  XDET_PRD_v1.0.md  XDET_PRM_v1.1.md  XDET_RTM_v1.1.md  XDET_SWR_spec_v1.2.md  XDET_TRM_v2.1.md  XDET_TestSpec_v1.0.md  XDET_VV_plan_v1.0.md  XDET_crosscheck_iteration_log_v2.1.md  XDET_crosscheck_report_v1.0.md  XDET_image_acquisition_sets_v1.1.md  XDET_measurement_item_list_v1.0.md  XDET_measurement_protocol_v1.0.md
docs/archive/: XDET_EVAL_criteria_v1.0.md  XDET_PRM_v1.0.md  XDET_RTM_skeleton_v1.0.md  XDET_TRM_v2.0.md
metrics/: __init__.py  defect_map.py  defect_stats.py  dqe.py  lag.py  lag_irf.py  mtf.py  ndt.py  noise_model.py  nps.py  result.py  scatter_kernel.py
modules/: __init__.py  defect.py  denoise.py  gain.py  geometry.py  grid.py  lag.py  line_noise.py  mse.py  offset.py  registry.py  saturation.py  virtual_grid.py  window.py
pipeline/: __init__.py  orchestrator.py  sequence.py  tier.py
scripts/: __init__.py  eval_intended_performance.py  ingest_edrogi.py  spike_gui_probe.py  test.ps1  test.sh
tests/: conftest.py  test_calibdom.py  test_calibset.py  test_contract.py  test_e2e_smoke.py  test_numeric_provenance_guard.py  test_orchestrator.py  test_pyramid.py  test_review_fixes.py  test_tc000.py  test_tc_edrogi_calibset.py  test_tc_edrogi_ingest.py  test_tc_ergonomics_exports.py  test_tc_ergonomics_introspect.py  test_tc_ergonomics_metric.py  test_tc_ergonomics_params.py  test_tc_realdata_arms.py  test_tc_realdata_linearity.py  test_tc_skeletons.py  test_xframe.py
tests/fixtures/: __init__.py  passthrough.py  post_tc012_baseline.json  violations.py
tests/metrics/: __init__.py  test_core.py  test_defect.py  test_lag.py  test_lag_irf.py  test_mtf.py  test_ndt.py  test_ndt_accum.py  test_ndt_contract.py  test_ndt_iqi.py  test_ndt_thickness.py  test_noise_model.py  test_nps_dqe.py  test_require_param.py  test_review_fixes_ndt.py  test_review_fixes_t1.py  test_scatter_kernel.py  test_tc_ndt.py
tests/modules/: test_contract_corr.py  test_defect.py  test_defect_map.py  test_denoise.py  test_gain.py  test_geometry.py  test_grid.py  test_grid_defects.py  test_lag.py  test_line_noise.py  test_mse.py  test_offset.py  test_review_fixes_corr.py  test_review_fixes_lnsg.py  test_review_fixes_post.py  test_saturation.py  test_tc_correction.py  test_tc_denoise.py  test_tc_grid.py  test_tc_lag.py  test_tc_lnsg.py  test_tc_post.py  test_tc_virtual_grid.py  test_virtual_grid.py  test_window.py
tests/pipeline/: frame_fixtures.py  test_calibdom_gate.py  test_equivalence_frame.py  test_grid_stage.py  test_lag_sequence.py  test_post_stages.py  test_tc_tier.py  test_tier_contract.py  test_tier_gating.py  test_virtual_grid_stage.py  tier_fixtures.py
(+69 files in other folders)
