[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xdet"
version = "0.1.0"
description = "XDET X-ray image processing SW P1 golden model (T0 framework scaffold)"
requires-python = ">=3.11"
authors = [{ name = "drake.lee" }]
# Accuracy is the single goal at P1; no speed optimization (CLAUDE.md, SWR-000-1).
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "import-linter>=2.0",
]
# GUI verification stack (SPEC-VIEWER-001, GUI_CRITERIA.md SS2). Phase 0 spike
# (.moai/reports/SPEC-VIEWER-001-spike.md, REQ-VIEW-SPIKE-1~2) measured napari
# (1st choice) against SG-1~SG-3 on Windows. SG-3 failed hard: napari's vispy
# canvas requires a real OpenGL context and Qt's Windows "offscreen" QPA
# platform does not support createPlatformOpenGLContext, so napari.Viewer()
# crashes with GLError under the C-14/C-15-mandated headless CI configuration
# (QT_QPA_PLATFORM=offscreen, no xvfb on Windows runners). Per REQ-VIEW-SPIKE-2
# this triggers the single-order fallback to pyqtgraph, which was verified to
# pass SG-1/SG-2/SG-3 under the same offscreen configuration. napari and
# magicgui are therefore NOT included here (see spike report for rationale) --
# pyside6 is now listed directly since it is pyqtgraph's Qt binding rather
# than an napari[pyside6] transitive dependency. PyQt6 remains EXCLUDED
# (GPL/commercial, C-13). Isolated via extras so the base package installs and
# passes core TCs without Qt (C-12).
gui = [
    "pyqtgraph>=0.14",
    "pyside6>=6.10",
    "qtpy>=2.4",
    "pytest-qt>=4.4",
]

[tool.setuptools]
# Flat top-level packages per CLAUDE.md scaffold (no src/ layout).
packages = ["common", "modules", "pipeline", "metrics"]

[tool.pytest.ini_options]
# Root on sys.path so `common`, `pipeline`, and `tests.fixtures.*` import
# without requiring an editable install step in CI.
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

# ---------------------------------------------------------------------------
# import-linter: declarative layering contract enforcing the dependency
# direction rule (SWR-000-8, REQ-INFRA-STATIC). module -> common is the only
# permitted direction; common must not import upward; modules must not import
# each other. Run via: `uv run lint-imports`.
# ---------------------------------------------------------------------------
[tool.importlinter]
root_packages = ["common", "modules", "pipeline", "metrics"]

[[tool.importlinter.contracts]]
name = "Processing layers: pipeline -> modules -> common (downward only)"
type = "layers"
layers = [
    "pipeline",
    "modules",
    "common",
]

[[tool.importlinter.contracts]]
name = "Metrics may depend on common, never the reverse"
type = "layers"
layers = [
    "metrics",
    "common",
]

[[tool.importlinter.contracts]]
name = "common is foundational: it must not import upward"
type = "forbidden"
source_modules = ["common"]
forbidden_modules = ["modules", "pipeline", "metrics"]

[[tool.importlinter.contracts]]
name = "Processing modules are mutually independent (no horizontal imports)"
type = "independence"
# T2/WP1 correction modules. Each is a single .py module under `modules/`;
# they must not import each other (SWR-000-8, REQ-CORR-CONTRACT-3).
modules = [
    "modules.offset",
    "modules.gain",
    "modules.defect",
    "modules.lag",
    "modules.line_noise",
    "modules.saturation",
    "modules.geometry",
    "modules.grid",
    "modules.virtual_grid",
    "modules.denoise",
    "modules.mse",
    "modules.window",
]

[[tool.importlinter.contracts]]
name = "Processing modules must not import metrics or pipeline (module -> common only)"
type = "forbidden"
source_modules = ["modules"]
forbidden_modules = ["metrics", "pipeline"]

# Tier gating (T10, SPEC-TIER-001) is an ADDITIVE wrapper that consumes the
# orchestrator surface + common only; the per-tier execution variants are INJECTED
# by the caller (registry pattern), so pipeline.tier must never import modules or
# metrics. The layers contract above permits pipeline -> modules in general, so this
# gap is closed here explicitly (replaces the hand-rolled AST scanner that used to
# live in tests/pipeline/test_tier_contract.py; import-linter is the single source
# of truth).
[[tool.importlinter.contracts]]
name = "Tier gating consumes orchestrator + common only (registry injection: no modules/metrics)"
type = "forbidden"
source_modules = ["pipeline.tier"]
forbidden_modules = ["modules", "metrics"]
